:lipstick: :adhesive_bandage: Fix dark mode logic to respect the user's system theme and update focus-visible style :adhesive_bandage: :lipstick:

--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -5,7 +5,7 @@
 
 @layer base {   
     :focus-visible {
-        @apply ring-4 ring-purple-200 outline-none
+        @apply ring-4 dark:ring-purple-300 ring-purple-200 outline-none
       }
       
     ::selection {
